@@ -92,10 +92,31 @@ public class RedisManagerImpl {
     this.pubSub = new VelocityPubSub();
 
     if (redisConfig.isEnabled()) {
-      this.start(redisConfig);
+      this.start(redisConfig, velocityServer);
     }
 
     registerListeners(velocityServer);
+  }
+
+  private void startKeepalive(final String proxyId, final VelocityServer server) {
+    if (jedisPool == null) {
+      return;
+    }
+
+    server.getScheduler()
+        .buildTask(VelocityVirtualPlugin.INSTANCE, () -> {
+          if (server.isStartedShutdown()) {
+            return;
+          }
+
+          try (Jedis jedis = jedisPool.getResource()) {
+            jedis.setex("PROXY_HEARTBEAT:" + proxyId, 30, "online");
+          } catch (Exception e) {
+            logger.error("Keepalive failed for Proxy ID '{}'.", proxyId, e);
+          }
+        })
+        .repeat(30, TimeUnit.SECONDS)
+        .schedule();
   }
 
   private void registerListeners(final VelocityServer proxy) {
@@ -127,7 +148,7 @@ public class RedisManagerImpl {
       if (connectedPlayer.getProtocolVersion().noLessThan(ProtocolVersion.MINECRAFT_1_20_5)) {
         String connectedServer = connectedPlayer.getConnectedServer() != null ? connectedPlayer.getConnectedServer().getServerInfo().getName() : null;
         send(new RedisPlayerSetTransferringRequest(connectedPlayer.getUniqueId(), true,
-                connectedServer));
+            connectedServer));
       }
 
       proxy.getScheduler().buildTask(VelocityVirtualPlugin.INSTANCE, () -> {
@@ -212,40 +233,6 @@ public class RedisManagerImpl {
   }
 
   /**
-   * Adds a proxy ID to the cache.
-   *
-   * @param id The ID of the proxy.
-   */
-  public void addProxyId(final String id) {
-    if (this.jedisPool == null) {
-      return;
-    }
-
-    try (Jedis jedis = this.jedisPool.getResource()) {
-      jedis.sadd("PROXY_IDS", id);
-    } catch (Exception e) {
-      e.printStackTrace();
-    }
-  }
-
-  /**
-   * Removes a proxy ID from the cache.
-   *
-   * @param id The ID of the proxy.
-   */
-  public void removeProxyId(final String id) {
-    if (this.jedisPool == null) {
-      return;
-    }
-
-    try (Jedis jedis = this.jedisPool.getResource()) {
-      jedis.srem("PROXY_IDS", id);
-    } catch (Exception e) {
-      e.printStackTrace();
-    }
-  }
-
-  /**
    * Gets all proxy ids from the cache.
    *
    * @return all the proxy ids.
@@ -256,12 +243,25 @@ public class RedisManagerImpl {
     }
 
     try (Jedis jedis = this.jedisPool.getResource()) {
-      return new ArrayList<>(jedis.smembers("PROXY_IDS").stream().toList());
+      return new ArrayList<>(jedis.keys("PROXY_HEARTBEAT:*").stream().map(key -> key.replace("PROXY_HEARTBEAT:", "")).collect(Collectors.toList()));
     } catch (Exception e) {
       e.printStackTrace();
     }
 
     return new ArrayList<>();
+  }
+
+  /**
+   * Remove the proxy ID from the redis cache.
+   *
+   * @param proxyId The proxy ID.
+   */
+  public void removeProxyId(final String proxyId) {
+    try (Jedis jedis = this.jedisPool.getResource()) {
+      jedis.del("PROXY_HEARTBEAT:" + proxyId);
+    } catch (Exception e) {
+      e.printStackTrace();
+    }
   }
 
   /**
@@ -400,7 +400,7 @@ public class RedisManagerImpl {
     }
   }
 
-  private void start(final VelocityConfiguration.Redis redisConfig) {
+  private void start(final VelocityConfiguration.Redis redisConfig, final VelocityServer server) {
     try {
       JedisPoolConfig poolConfig = new JedisPoolConfig();
       poolConfig.setMaxTotal(redisConfig.getMaxConcurrentConnections());
@@ -421,18 +421,47 @@ public class RedisManagerImpl {
         try (Jedis jedis = this.jedisPool.getResource()) {
           jedis.subscribe(this.pubSub, CHANNEL);
         } catch (JedisException e) {
-          logger.error("error in pubsub listener", e);
+          logger.error("Error in pubsub listener", e);
         }
       });
       thread.setName("Velocity Redis PubSub Listener Thread");
       thread.setDaemon(true);
       thread.start();
+
+      validateProxyId(redisConfig.getProxyId());
+      startKeepalive(redisConfig.getProxyId(), server);
+      startKeepalivePlayers(server);
     } catch (Exception e) {
-      logger.error("Failed to set up Redis connection", e);
+      logger.error("Failed to setup Redis connection", e);
+    }
+  }
+
+  private void startKeepalivePlayers(final VelocityServer proxy) {
+    proxy.getScheduler().buildTask(VelocityVirtualPlugin.INSTANCE, () -> {
+      for (RemotePlayerInfo info : this.getCache()) {
+        if (info.getProxyId().equalsIgnoreCase(proxy.getConfiguration().getRedis().getProxyId())) {
+          if (proxy.getPlayer(info.getUuid()).isEmpty()) {
+            removePlayer(info);
+          }
+        }
+      }
+    }).repeat(30, TimeUnit.SECONDS).schedule();
+  }
+
+  private void validateProxyId(final String proxyId) {
+    if (jedisPool == null) {
+      throw new IllegalStateException("Redis connection pool is not initialized.");
     }
 
-    if (getProxyIds().contains(redisConfig.getProxyId())) {
-      throw new IllegalArgumentException("This Proxy ID is already in use!");
+    try (Jedis jedis = jedisPool.getResource()) {
+      if (jedis.exists("PROXY_HEARTBEAT:" + proxyId)) {
+        logger.error("Proxy ID '{}' is still marked as running. Killing"
+            + " your proxies with Redis enabled is not suggested. Please wait"
+            + " for Redis to automatically determine whether the proxy is online or not.", proxyId);
+        System.exit(0);
+      }
+    } catch (Exception e) {
+      throw new IllegalStateException("Failed to validate Proxy ID.", e);
     }
   }
 
@@ -510,7 +539,7 @@ public class RedisManagerImpl {
         instance = gson.fromJson(obj, registration.clazz);
       } catch (JsonSyntaxException e) {
         logger.error("received invalid JSON on channel {} for packet class {}", channel,
-                registration.clazz, e);
+            registration.clazz, e);
         return;
       }
 
